Lots of refactoring, making harnesses for new pattern

--- a/certora/conf/EVault/modules/BalanceForwarder.conf
+++ b/certora/conf/EVault/modules/BalanceForwarder.conf
@@ -2,20 +2,30 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/BalanceForwarder.sol"
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/BalanceForwarder.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/BalanceForwarderHarness.sol",
   ],
   "link": [
-    "BalanceForwarder:evc=EthereumVaultConnector",
+    "BalanceForwarderHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "BalanceForwarder:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "BalanceForwarderHarness:certora/specs/BalanceForwarder.spec",
   "solc": "solc8.23",
-  "solc_via_ir": true,
-  "solc_optimize": "10000",
-  "rule_sanity": "basic",
-  "msg": "BalanceForwarder benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "prover_version": "master",
+  "server" : "production",
+  // "coverage_info" : "advanced",
   "parametric_contracts": ["BalanceForwarder"],
+  "prover_args": ["-smt_bitVectorTheory", "true"],
+  "optimistic_loop": true, 
+  "loop_iter": "2",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
+  "rule_sanity": "basic",
+  "function_finder_mode" : "relaxed",
+  "finder_friendly_optimizer" : false,
 }
