--- a/certora/conf/EVault/modules/Borrowing.conf
+++ b/certora/conf/EVault/modules/Borrowing.conf
@@ -2,20 +2,26 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/Borrowing.sol"
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/Borrowing.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/BorrowingHarness.sol",
   ],
   "link": [
-    "Borrowing:evc=EthereumVaultConnector",
+    "BorrowingHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "Borrowing:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "BorrowingHarness:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  "solc_via_ir": true,
-  "solc_optimize": "10000",
   "rule_sanity": "basic",
   "msg": "Borrowing benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "parametric_contracts": ["Borrowing"]
+  "parametric_contracts": ["BorrowingHarness"],
+  // Performance tuning options below this line
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
+  "optimistic_loop": true, 
+  "loop_iter": "2",
 }
