--- a/certora/conf/EVault/modules/Governance.conf
+++ b/certora/conf/EVault/modules/Governance.conf
@@ -2,21 +2,27 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     "src/ProtocolConfig/ProtocolConfig.sol",
-    "src/EVault/modules/Governance.sol"
+    "src/EVault/modules/Governance.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/GovernanceHarness.sol",
   ],
   "link": [
-    "Governance:protocolConfig=ProtocolConfig",
-    "Governance:evc=EthereumVaultConnector"
+    "GovernanceHarness:protocolConfig=ProtocolConfig",
+    "GovernanceHarness:evc=EthereumVaultConnector"
   ],
-  "verify": "Governance:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "GovernanceHarness:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  "solc_via_ir": true,
-  "solc_optimize": "10000",
   "rule_sanity": "basic",
   "msg": "Governance benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  // Performance tuning options below this line
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
+  "optimistic_loop": true, 
+  "loop_iter": "2",
 }
