--- a/certora/conf/EVault/modules/Initialize.conf
+++ b/certora/conf/EVault/modules/Initialize.conf
@@ -1,8 +1,16 @@
 {
   "files": [
-    "src/EVault/modules/Initialize.sol"
+   "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/Initialize.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/InitializeHarness.sol",
   ],
-  "verify": "Initialize:certora/specs/benchmarking/Benchmarking.spec",
+  "link": [
+    "InitializeHarness:evc=EthereumVaultConnector",
+  ],
+  "verify": "InitializeHarness:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
   "solc_via_ir": true,
   "solc_optimize": "10000",
@@ -12,5 +20,5 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "parametric_contracts": ["Initialize"],
+  "parametric_contracts": ["InitializeHarness"],
 }
