--- a/certora/conf/EVault/modules/RiskManager.conf
+++ b/certora/conf/EVault/modules/RiskManager.conf
@@ -2,20 +2,39 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/RiskManager.sol"
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/RiskManager.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/RiskManagerHarness.sol",
   ],
   "link": [
-    "RiskManager:evc=EthereumVaultConnector",
+    "RiskManagerHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "RiskManager:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "RiskManagerHarness:certora/specs/RiskManager.spec",
   "solc": "solc8.23",
-  "solc_via_ir": true,
-  "solc_optimize": "10000",
-  "rule_sanity": "basic",
-  "msg": "RiskManager benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "parametric_contracts": ["RiskManager"],
+  // "rule": [
+  //   "ltv_borrowing_lower"
+  //   // "liquidations_equal_for_one"
+  // ],
+  "parametric_contracts": ["RiskManagerHarness"],
+  "rule_sanity": "basic",
+  "server": "production",
+  // "coverage_info" : "advanced",
+  // Performance tuning options below this line
+	"prover_args": [
+		"-depth 0",
+		"-smt_nonLinearArithmetic true",
+		"-adaptiveSolverConfig false"
+	],
+  "function_finder_mode": "relaxed",
+  "optimistic_loop": true, 
+  "loop_iter": "2",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
+  "smt_timeout": "7000",
+  "prover_version": "master"
 }
