--- a/certora/conf/EVault/modules/Token.conf
+++ b/certora/conf/EVault/modules/Token.conf
@@ -2,20 +2,24 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/Token.sol"
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/Token.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/TokenHarness.sol",
   ],
   "link" : [
-    "Token:evc=EthereumVaultConnector",
+    "TokenHarness:evc=EthereumVaultConnector",
   ],
-  "parametric_contracts": ["Token"],
-  "verify": "Token:certora/specs/EVault/modules/Token.spec",
+  "parametric_contracts": ["TokenHarness"],
+  "verify": "TokenHarness:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  "solc_via_ir": true,
-  "solc_optimize": "10000",
   "rule_sanity": "basic",
   "msg": "Token benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  // Performance tuning options below this line
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
 }
