--- a/certora/conf/EVault/modules/Vault.conf
+++ b/certora/conf/EVault/modules/Vault.conf
@@ -2,20 +2,26 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "src/EVault/modules/Vault.sol"
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "src/EVault/modules/Vault.sol",
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/VaultHarness.sol",
   ],
   "link" : [
-    "Vault:evc=EthereumVaultConnector",
+    "VaultHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "Vault:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "VaultHarness:certora/specs/benchmarking/Benchmarking.spec",
   "solc": "solc8.23",
-  "solc_via_ir": true,
-  "solc_optimize": "10000",
   "rule_sanity": "basic",
   "msg": "Vault benchmarking",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "parametric_contracts": ["Vault"],
+  "parametric_contracts": ["VaultHarness"],
+  // Performance tuning options below this line
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
+  "optimistic_loop": true, 
+  "loop_iter": "2",
 }
