--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -2,14 +2,15 @@
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    // "src/EVault/shared/types/Types.sol",
+    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
     "src/EVault/modules/Liquidation.sol",
-    "certora/harness/LiquidationHarness.sol"
+    "certora/harness/BaseHarness.sol",
+    "certora/harness/modules/LiquidationHarness.sol"
   ],
   "link": [
     "LiquidationHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "LiquidationHarness:certora/specs/EVault/modules/Liquidation.spec",
+  "verify": "LiquidationHarness:certora/specs/Liquidation.spec",
   "solc": "solc8.23",
   "msg": "Liquidation benchmarking",
   "packages": [
@@ -17,16 +18,23 @@
       "forge-std=lib/forge-std/src"
   ],
   // "rule": [
-  //   "checkLiquidation_maxYieldGreater"
+  //   "getCollateralValue_borrowing_lower"
   // ],
-  // "coverage_info" : "advanced",
   "parametric_contracts": ["LiquidationHarness"],
+  "rule_sanity": "basic",
+  "prover_version": "master",
+  "server" : "production",
+  // "coverage_info" : "advanced",
+  // Performance tuing options below this line
+	"prover_args": [
+		"-depth 10",
+		"-smt_nonLinearArithmetic true",
+		"-adaptiveSolverConfig false"
+	],
+  "function_finder_mode": "relaxed",
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
   "solc_optimize": "10000",
-  "rule_sanity": "basic",
-  "function_finder_mode" : "relaxed",
-  "finder_friendly_optimizer" : "no",
-  "prover_version" : "master" // need for dev fix
+  "smt_timeout": "7000"
 }
