Remove bad envfrees in ERC4626 spec

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -14,13 +14,28 @@
   "verify": "ERC4626Harness:certora/specs/VaultERC4626.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
-  "msg": "Vault benchmarking",
+  "msg": "Vault ERC4626",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  // currently the rules with sanity failures
+  // "rule": [
+  // //   "assetsMoreThanSupply",
+  // // "contributingProducesShares",
+  // "depositMonotonicity",
+  // //   "dustFavorsTheHouse",
+  // //   "noAssetsIfNoSupply",
+  // //   "noSupplyIfNoAssets",
+  // //   "onlyContributionMethodsReduceAssets",
+  // //   "reclaimingProducesAssets",
+  // //   "redeemingAllValidity",
+  // //   "totalsMonotonicity",
+  // //   "vaultSolvency"
+  // ],
+  // "coverage_info" : "advanced",
   "parametric_contracts": ["ERC4626Harness"],
-  "build_cache": true,
+  // "build_cache": true,
   "prover_version" : "master",
   // Performance tuning options below this line
   "solc_via_ir": true,
@@ -29,7 +44,7 @@
   "loop_iter": "2",
   // options borrowed from Liquidation
 	"prover_args": [
-		"-depth 10",
+		"-depth 0",
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false"
 	],
