WIP on erc4626. Mainly adding helpers. Some edits to Base.spec

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -1,15 +1,17 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
-    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    // "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    // TODO do we need EVC for this spec?
+    // "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    // "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/Vault.sol",
-    "src/EVault/modules/Token.sol",
+    "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyERC20B.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/ERC4626Harness.sol",
   ],
   "link" : [
-    "ERC4626Harness:evc=EthereumVaultConnector",
+    // "ERC4626Harness:evc=EthereumVaultConnector",
+    "ERC4626Harness:underlying_asset=DummyERC20A"
   ],
   "verify": "ERC4626Harness:certora/specs/VaultERC4626.spec",
   "solc": "solc8.23",
@@ -20,10 +22,10 @@
       "forge-std=lib/forge-std/src"
   ],
   // currently the rules with sanity failures
-  // "rule": [
+  "rule": [
   // //   "assetsMoreThanSupply",
-  // // "contributingProducesShares",
-  // "depositMonotonicity",
+  //  "contributingProducesShares",
+  "depositMonotonicity",
   // //   "dustFavorsTheHouse",
   // //   "noAssetsIfNoSupply",
   // //   "noSupplyIfNoAssets",
@@ -32,7 +34,7 @@
   // //   "redeemingAllValidity",
   // //   "totalsMonotonicity",
   // //   "vaultSolvency"
-  // ],
+  ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["ERC4626Harness"],
   // "build_cache": true,
@@ -43,10 +45,10 @@
   "optimistic_loop": true, 
   "loop_iter": "2",
   // options borrowed from Liquidation
-	"prover_args": [
-		"-depth 0",
-		"-smt_nonLinearArithmetic true",
-		"-adaptiveSolverConfig false"
-	],
-  "smt_timeout": "7000"
+	// "prover_args": [
+	// 	"-depth 0",
+	// 	"-smt_nonLinearArithmetic true",
+	// 	"-adaptiveSolverConfig false"
+	// ],
+  // "smt_timeout": "7000"
 }
