Rerun all rules to check if sanity issues fixed

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -22,19 +22,19 @@
       "forge-std=lib/forge-std/src"
   ],
   // currently the rules with sanity failures
-  "rule": [
-  // //   "assetsMoreThanSupply",
-  //  "contributingProducesShares",
-  "depositMonotonicity",
-  // //   "dustFavorsTheHouse",
-  // //   "noAssetsIfNoSupply",
-  // //   "noSupplyIfNoAssets",
-  // //   "onlyContributionMethodsReduceAssets",
-  // //   "reclaimingProducesAssets",
-  // //   "redeemingAllValidity",
-  // //   "totalsMonotonicity",
-  // //   "vaultSolvency"
-  ],
+  // "rule": [
+  // // //   "assetsMoreThanSupply",
+  // //  "contributingProducesShares",
+  // "depositMonotonicity",
+  // // //   "dustFavorsTheHouse",
+  // // //   "noAssetsIfNoSupply",
+  // // //   "noSupplyIfNoAssets",
+  // // //   "onlyContributionMethodsReduceAssets",
+  // // //   "reclaimingProducesAssets",
+  // // //   "redeemingAllValidity",
+  // // //   "totalsMonotonicity",
+  // // //   "vaultSolvency"
+  // ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["ERC4626Harness"],
   // "build_cache": true,
