--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -22,10 +22,10 @@
       "forge-std=lib/forge-std/src"
   ],
   // currently the rules with sanity failures
-  // "rule": [
+  "rule": [
   // // //   "assetsMoreThanSupply",
   // //  "contributingProducesShares",
-  // "depositMonotonicity",
+  "depositMonotonicity",
   // // //   "dustFavorsTheHouse",
   // // //   "noAssetsIfNoSupply",
   // // //   "noSupplyIfNoAssets",
@@ -34,7 +34,7 @@
   // // //   "redeemingAllValidity",
   // // //   "totalsMonotonicity",
   // // //   "vaultSolvency"
-  // ],
+  ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["ERC4626Harness"],
   // "build_cache": true,
@@ -44,11 +44,12 @@
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  // options borrowed from Liquidation
-	// "prover_args": [
-	// 	"-depth 0",
-	// 	"-smt_nonLinearArithmetic true",
-	// 	"-adaptiveSolverConfig false"
-	// ],
-  // "smt_timeout": "7000"
+  "prover_args": [
+		"-smt_nonLinearArithmetic true",
+		"-adaptiveSolverConfig false",
+		"-solvers [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]",
+		"-splitParallel true"
+	],
+  "nondet_difficult_funcs": true,
+  "smt_timeout": "7000"
 }
