Mainly summarize calls that havoc contract state

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -25,8 +25,8 @@
   "rule": [
   // // //   "assetsMoreThanSupply",
   // //  "contributingProducesShares",
-  "depositMonotonicity",
-  // // //   "dustFavorsTheHouse",
+  // "depositMonotonicity",
+  "dustFavorsTheHouse",
   // // //   "noAssetsIfNoSupply",
   // // //   "noSupplyIfNoAssets",
   // // //   "onlyContributionMethodsReduceAssets",
@@ -37,7 +37,7 @@
   ],
   // "coverage_info" : "advanced",
   "parametric_contracts": ["ERC4626Harness"],
-  // "build_cache": true,
+  "build_cache": true,
   "prover_version" : "master",
   // Performance tuning options below this line
   "solc_via_ir": true,
@@ -50,6 +50,6 @@
 		"-solvers [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]",
 		"-splitParallel true"
 	],
-  "nondet_difficult_funcs": true,
-  "smt_timeout": "7000"
+  // "nondet_difficult_funcs": true,
+  // "smt_timeout": "7000"
 }
