Comments with runs. Fixing timeout for cache. Fixes in vault spec/conf post update

--- a/certora/conf/EVault/modules/Vault.conf
+++ b/certora/conf/EVault/modules/Vault.conf
@@ -10,19 +10,20 @@
   "link" : [
     "VaultHarness:evc=EthereumVaultConnector",
   ],
-  "verify": "VaultHarness:certora/specs/benchmarking/Benchmarking.spec",
+  "verify": "VaultHarness:certora/specs/Vault.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
-  "msg": "Vault benchmarking",
+  "msg": "Vault",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
   "parametric_contracts": ["VaultHarness"],
+  "prover_version": "master",
+  "build_cache" : true,
   // Performance tuning options below this line
   "solc_via_ir": true,
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_version": "master"
 }
