Add more passing run links

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -26,10 +26,10 @@
   // // //   "assetsMoreThanSupply",
   // //  "contributingProducesShares",
   // "depositMonotonicity",
-  "dustFavorsTheHouse",
+  // "dustFavorsTheHouse",
   // // //   "noAssetsIfNoSupply",
   // // //   "noSupplyIfNoAssets",
-  // // //   "onlyContributionMethodsReduceAssets",
+  "onlyContributionMethodsReduceAssets",
   // // //   "reclaimingProducesAssets",
   // // //   "redeemingAllValidity",
   // // //   "totalsMonotonicity",
