Make base consistent with main certora branch

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -1,7 +1,7 @@
 {
   "files": [
     // TODO do we need EVC for this spec?
-    // "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     // "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/Vault.sol",
     "certora/helpers/DummyERC20A.sol",
