Mainly attempted summary of loadVault

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -9,10 +9,10 @@
     "certora/harness/BaseHarness.sol",
     "certora/harness/ERC4626Harness.sol",
   ],
-  "link" : [
-    // "ERC4626Harness:evc=EthereumVaultConnector",
-    "ERC4626Harness:underlying_asset=DummyERC20A"
-  ],
+  // "link" : [
+  //   // "ERC4626Harness:evc=EthereumVaultConnector",
+  //   "ERC4626Harness:underlying_asset=DummyERC20A"
+  // ],
   "verify": "ERC4626Harness:certora/specs/VaultERC4626.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
@@ -28,14 +28,16 @@
   // "depositMonotonicity",
   // "dustFavorsTheHouse",
   // // //   "noAssetsIfNoSupply",
-  // // //   "noSupplyIfNoAssets",
-  "onlyContributionMethodsReduceAssets",
+    "noSupplyIfNoAssets",
+  // "onlyContributionMethodsReduceAssets",
   // // //   "reclaimingProducesAssets",
   // // //   "redeemingAllValidity",
   // // //   "totalsMonotonicity",
   // // //   "vaultSolvency"
   ],
   // "coverage_info" : "advanced",
+  "method": "redeem(uint256,address,address)",
+  // "method": "withdraw(uint256,address,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
   "prover_version" : "master",
