Vault summary for ERC4626

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -36,7 +36,7 @@
   // // //   "vaultSolvency"
   ],
   // "coverage_info" : "advanced",
-  "method": "redeem(uint256,address,address)",
+  // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
