--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -23,20 +23,21 @@
   ],
   // currently the rules with sanity failures
   "rule": [
+  // "conversionWeakMonotonicity"
   // // //   "assetsMoreThanSupply",
   // //  "contributingProducesShares",
   // "depositMonotonicity",
   // "dustFavorsTheHouse",
   // // //   "noAssetsIfNoSupply",
-    "noSupplyIfNoAssets",
-  // "onlyContributionMethodsReduceAssets",
-  // // //   "reclaimingProducesAssets",
+  // "noSupplyIfNoAssets",
+  "onlyContributionMethodsReduceAssets",
+  //  "reclaimingProducesAssets",
   // // //   "redeemingAllValidity",
   // // //   "totalsMonotonicity",
   // // //   "vaultSolvency"
   ],
   // "coverage_info" : "advanced",
-  "method": "redeem(uint256,address,address)",
+  // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
@@ -46,12 +47,19 @@
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_args": [
+	"prover_args": [
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false",
-		"-solvers [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]",
-		"-splitParallel true"
+		"-solvers [cvc5:nonlin{randomSeed=1},cvc5:nonlin{randomSeed=2},cvc5:nonlin{randomSeed=3},cvc5:nonlin{randomSeed=4},cvc5:nonlin{randomSeed=5},cvc5:nonlin{randomSeed=6},cvc5:nonlin{randomSeed=7},cvc5:nonlin{randomSeed=8},cvc5:nonlin{randomSeed=9},cvc5:nonlin{randomSeed=10}]",
+		"-depth 0"
 	],
+  // old config
+  // "prover_args": [
+	// 	"-smt_nonLinearArithmetic true",
+	// 	"-adaptiveSolverConfig false",
+	// 	"-solvers [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]",
+	// 	"-splitParallel true"
+	// ],
   // "nondet_difficult_funcs": true,
   // "smt_timeout": "7000"
 }
