delete old EVaultERC4626 conf

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -21,21 +21,20 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // currently the rules with sanity failures
-  "rule": [
-  // "conversionWeakMonotonicity"
-  // // //   "assetsMoreThanSupply",
+  // "rule": [
+  // // "conversionWeakMonotonicity",
+  // //   "assetsMoreThanSupply",
   // //  "contributingProducesShares",
-  // "depositMonotonicity",
-  // "dustFavorsTheHouse",
-  // // //   "noAssetsIfNoSupply",
-  // "noSupplyIfNoAssets",
-  "onlyContributionMethodsReduceAssets",
-  //  "reclaimingProducesAssets",
-  // // //   "redeemingAllValidity",
-  // // //   "totalsMonotonicity",
-  // // //   "vaultSolvency"
-  ],
+  // // "depositMonotonicity",
+  // // "dustFavorsTheHouse",
+  // //   "noAssetsIfNoSupply",
+  // // "noSupplyIfNoAssets",
+  // // "onlyContributionMethodsReduceAssets",
+  // //  "reclaimingProducesAssets",
+  // // "redeemingAllValidity",
+  // // "totalsMonotonicity",
+  // // "vaultSolvency"
+  // ],
   // "coverage_info" : "advanced",
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
