--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -38,7 +38,7 @@
   // "coverage_info" : "advanced",
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
-  "method" : "deposit(uint256,address)",
+  // "method" : "deposit(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
   "prover_version" : "master",
