Add passing run link

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -39,6 +39,7 @@
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   // "method" : "deposit(uint256,address)",
+  // "method" : "mint(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
   "prover_version" : "master",
