--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -35,10 +35,10 @@
   // // "totalsMonotonicity",
   // // "vaultSolvency"
   // ],
-  // "coverage_info" : "advanced",
+  "coverage_info" : "advanced",
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
-  // "method" : "deposit(uint256,address)",
+  "method" : "deposit(uint256,address)",
   // "method" : "mint(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
