fixed sanity in totalSupplyIsSumOfBalances and it passes

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -23,22 +23,22 @@
   ],
   // "rule": [
   // // "conversionWeakMonotonicity",
-  // //   "assetsMoreThanSupply",
-  // //  "contributingProducesShares",
+  // // "assetsMoreThanSupply",
+  // // "contributingProducesShares",
   // // "depositMonotonicity",
   // // "dustFavorsTheHouse",
-  // //   "noAssetsIfNoSupply",
+  // // "noAssetsIfNoSupply",
   // // "noSupplyIfNoAssets",
   // // "onlyContributionMethodsReduceAssets",
-  // //  "reclaimingProducesAssets",
+  // // "reclaimingProducesAssets",
   // // "redeemingAllValidity",
   // // "totalsMonotonicity",
   // // "vaultSolvency"
   // ],
-  "coverage_info" : "advanced",
+  // "coverage_info" : "advanced",
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
-  "method" : "deposit(uint256,address)",
+  // "method" : "deposit(uint256,address)",
   // "method" : "mint(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
