Add better conf options for performance. Should pass

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -49,6 +49,7 @@
   "optimistic_loop": true, 
   "loop_iter": "2",
 	"prover_args": [
+    "-summaryResolutionMode tierd",
 		"-smt_nonLinearArithmetic true",
 		"-adaptiveSolverConfig false",
 		"-solvers [cvc5:nonlin{randomSeed=1},cvc5:nonlin{randomSeed=2},cvc5:nonlin{randomSeed=3},cvc5:nonlin{randomSeed=4},cvc5:nonlin{randomSeed=5},cvc5:nonlin{randomSeed=6},cvc5:nonlin{randomSeed=7},cvc5:nonlin{randomSeed=8},cvc5:nonlin{randomSeed=9},cvc5:nonlin{randomSeed=10}]",
