--- a/certora/conf/Cache.conf
+++ b/certora/conf/Cache.conf
@@ -25,4 +25,10 @@
   "rule_sanity": "basic",
   // "function_finder_mode" : "relaxed",
   // "finder_friendly_optimizer" : false,
+	"prover_args": [
+		"-smt_nonLinearArithmetic true",
+		"-adaptiveSolverConfig false",
+		"-solvers [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]"
+	],
+	"smt_timeout": "7000",
 }
