Save debugging of asset-sanity

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -5,14 +5,14 @@
     // "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "src/EVault/modules/Vault.sol",
     "certora/helpers/DummyERC20A.sol",
-    "certora/helpers/DummyERC20B.sol",
+    // "certora/helpers/DummyERC20B.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/ERC4626Harness.sol",
   ],
-  // "link" : [
+  "link" : [
   //   // "ERC4626Harness:evc=EthereumVaultConnector",
-  //   "ERC4626Harness:underlying_asset=DummyERC20A"
-  // ],
+    "ERC4626Harness:underlying_asset=DummyERC20A"
+  ],
   "verify": "ERC4626Harness:certora/specs/VaultERC4626.spec",
   "solc": "solc8.23",
   "rule_sanity": "basic",
