--- a/certora/conf/Cache.conf
+++ b/certora/conf/Cache.conf
@@ -20,9 +20,9 @@
   "parametric_contracts": ["CacheHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
   "rule_sanity": "basic",
-  // "function_finder_mode" : "relaxed",
-  // "finder_friendly_optimizer" : false,
+  "function_finder_mode" : "relaxed",
+  "finder_friendly_optimizer" : false,
 }
