--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -22,18 +22,19 @@
       "forge-std=lib/forge-std/src"
   ],
   // "rule": [
-  // // "conversionWeakMonotonicity",
-  // // "assetsMoreThanSupply",
-  // // "contributingProducesShares",
+  // //    "conversionWeakMonotonicity",
+  // //    "assetsMoreThanSupply",
+  // //    "contributingProducesShares",
   // // "depositMonotonicity",
-  // // "dustFavorsTheHouse",
-  // // "noAssetsIfNoSupply",
-  // // "noSupplyIfNoAssets",
-  // // "onlyContributionMethodsReduceAssets",
-  // // "reclaimingProducesAssets",
-  // // "redeemingAllValidity",
-  // // "totalsMonotonicity",
-  // // "vaultSolvency"
+  // //    "dustFavorsTheHouse",
+  // //    "noAssetsIfNoSupply",
+  // //    "noSupplyIfNoAssets",
+  // //    "supplyLessThanUnderlyingAsset",
+  // //    "onlyContributionMethodsReduceAssets",
+  // //    "reclaimingProducesAssets",
+  // //    "redeemingAllValidity",
+  // //    "totalsMonotonicity",
+  // //    "vaultSolvency"
   // ],
   // "coverage_info" : "advanced",
   // "method": "redeem(uint256,address,address)",
@@ -42,18 +43,19 @@
   // "method" : "mint(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
-  "prover_version" : "master",
+  "prover_version" : "eric/CERT-6172",
   // Performance tuning options below this line
   "solc_via_ir": true,
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-	// "prover_args": [
-	// 	"-smt_nonLinearArithmetic true",
-	// 	"-adaptiveSolverConfig false",
-	// 	"-solvers [cvc5:nonlin{randomSeed=1},cvc5:nonlin{randomSeed=2},cvc5:nonlin{randomSeed=3},cvc5:nonlin{randomSeed=4},cvc5:nonlin{randomSeed=5},cvc5:nonlin{randomSeed=6},cvc5:nonlin{randomSeed=7},cvc5:nonlin{randomSeed=8},cvc5:nonlin{randomSeed=9},cvc5:nonlin{randomSeed=10}]",
-	// 	"-depth 0"
-	// ],
+  "prover_args": [
+    "-maxConcurrentTransforms INLINED_HOOKS:8",
+    "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 "
+  ]
+  // "prover_args": [
+		// "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 -s [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]"
+	// ] ,
   // old config
   // "prover_args": [
 	// 	"-smt_nonLinearArithmetic true",
@@ -62,5 +64,6 @@
 	// 	"-splitParallel true"
 	// ],
   // "nondet_difficult_funcs": true,
-  // "smt_timeout": "7000"
+  // "smt_timeout": "7200"
 }
+
