Mainly health status check changes

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -6,6 +6,7 @@
     "src/EVault/modules/Vault.sol",
     "certora/helpers/DummyERC20A.sol",
     "certora/helpers/DummyERC20B.sol",
+    "certora/harness/EVCHarness.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/ERC4626Harness.sol",
   ],
@@ -21,9 +22,9 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
+ "rule": [
   // //    "conversionWeakMonotonicity",
-  // //    "assetsMoreThanSupply",
+    "assetsMoreThanSupply",
   // //    "contributingProducesShares",
   // // "depositMonotonicity",
   // //    "dustFavorsTheHouse",
@@ -35,24 +36,28 @@
   // //    "redeemingAllValidity",
   // //    "totalsMonotonicity",
   // //    "vaultSolvency"
-  // ],
+  ],
   // "coverage_info" : "advanced",
-  // "method": "redeem(uint256,address,address)",
+  "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   // "method" : "deposit(uint256,address)",
   // "method" : "mint(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
-  "prover_version" : "eric/CERT-6172",
+  "prover_version" : "master",
+  // "prover_version" : "eric/CERT-6172",
   // Performance tuning options below this line
   "solc_via_ir": true,
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
   "prover_args": [
-    "-maxConcurrentTransforms INLINED_HOOKS:8",
-    "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 "
-  ]
+    "-adaptiveSolverConfig false -smt_nonLinearArithmetic false -depth 0"
+  ],
+  // "prover_args": [
+  //   "-maxConcurrentTransforms INLINED_HOOKS:8",
+  //   "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 "
+  // ]
   // "prover_args": [
 		// "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 -s [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]"
 	// ] ,
