--- a/certora/conf/healthStatus/BorrowingHealthStatus.conf
+++ b/certora/conf/healthStatus/BorrowingHealthStatus.conf
@@ -1,6 +1,5 @@
 {
   "files": [
-    // "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
@@ -18,9 +17,9 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
-  // "method" : "borrow(uint256,address)",
+  "method" : "borrow(uint256,address)",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
