--- a/certora/conf/healthStatus/LiquidationHealthStatus.conf
+++ b/certora/conf/healthStatus/LiquidationHealthStatus.conf
@@ -1,13 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "certora/harness/EVCHarness.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/healthStatus/LiquidationHSHarness.sol",
   ],
   "link": [
-    "LiquidationHSHarness:evc=EthereumVaultConnector",
+    "LiquidationHSHarness:evc=EVCHarness",
   ],
   "verify": "LiquidationHSHarness:certora/specs/HealthStatusInvariant.spec",
   "solc": "solc8.23",
@@ -16,7 +17,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
   "prover_version": "master",
