--- a/certora/conf/healthStatus/BalanceForwarderHealthStatus.conf
+++ b/certora/conf/healthStatus/BalanceForwarderHealthStatus.conf
@@ -1,13 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "certora/harness/EVCHarness.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/BalanceForwarder.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/healthStatus/BalanceForwarderHSHarness.sol",
   ],
   "link": [
-    "BalanceForwarderHSHarness:evc=EthereumVaultConnector",
+    "BalanceForwarderHSHarness:evc=EVCHarness",
   ],
   "verify": "BalanceForwarderHSHarness:certora/specs/HealthStatusInvariant.spec",
   "solc": "solc8.23",
@@ -16,19 +17,23 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
-  // "method": "enableBalanceForwarder()",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
   "parametric_contracts": ["BalanceForwarderHSHarness"],
-  // "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
-  // "solc_via_ir": true,
-  // "solc_optimize": "10000",
-  // "rule_sanity": "basic",
-  // "function_finder_mode" : "relaxed",
-  // "finder_friendly_optimizer" : false,
+  "solc_via_ir": true,
+  "solc_optimize": "10000",
+  "rule_sanity": "basic",
+  "function_finder_mode" : "relaxed",
+  "finder_friendly_optimizer" : false,
+  "prover_args": [
+		"-splitParallel true",
+		"-deleteSMTFile false",
+		"-smt_easy_LIA true"
+	],
+	"smt_timeout": "4800",
 }
