--- a/certora/conf/healthStatus/BorrowingHealthStatus.conf
+++ b/certora/conf/healthStatus/BorrowingHealthStatus.conf
@@ -19,12 +19,11 @@
   "rule" : [
     "accountsStayHealthy_strategy"
   ],
-  "method" : "borrow(uint256,address)",
+  // "method" : "borrow(uint256,address)",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
   "parametric_contracts": ["BorrowingHSHarness"],
-  // "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
@@ -32,4 +31,10 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "prover_args": [
+		"-splitParallel true",
+		"-deleteSMTFile false",
+		"-smt_easy_LIA true"
+	],
+	"smt_timeout": "4800",
 }
