--- a/certora/conf/healthStatus/GovernanceHealthStatus.conf
+++ b/certora/conf/healthStatus/GovernanceHealthStatus.conf
@@ -1,13 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "certora/harness/EVCHarness.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/healthStatus/GovernanceHSHarness.sol",
   ],
   "link": [
-    "GovernanceHSHarness:evc=EthereumVaultConnector",
+    "GovernanceHSHarness:evc=EVCHarness",
   ],
   "verify": "GovernanceHSHarness:certora/specs/HealthStatusInvariant.spec",
   "solc": "solc8.23",
@@ -16,7 +17,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
   "prover_version": "master",
@@ -30,4 +31,10 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "prover_args": [
+		"-splitParallel true",
+		"-deleteSMTFile false",
+		"-smt_easy_LIA true"
+	],
+	"smt_timeout": "4800",
 }
