--- a/certora/conf/healthStatus/LiquidationHealthStatus.conf
+++ b/certora/conf/healthStatus/LiquidationHealthStatus.conf
@@ -23,7 +23,6 @@
   "prover_version": "master",
   "server" : "production",
   "parametric_contracts": ["LiquidationHSHarness"],
-  // "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
@@ -31,4 +30,10 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "prover_args": [
+		"-splitParallel true",
+		"-deleteSMTFile false",
+		"-smt_easy_LIA true"
+	],
+	"smt_timeout": "4800",
 }
