--- a/certora/conf/healthStatus/TokenHealthStatus.conf
+++ b/certora/conf/healthStatus/TokenHealthStatus.conf
@@ -1,13 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "certora/harness/EVCHarness.sol",
+    "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/healthStatus/TokenHSHarness.sol",
   ],
   "link": [
-    "TokenHSHarness:evc=EthereumVaultConnector",
+    "TokenHSHarness:evc=EVCHarness",
   ],
   "verify": "TokenHSHarness:certora/specs/HealthStatusInvariant.spec",
   "solc": "solc8.23",
@@ -16,13 +17,12 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
   "parametric_contracts": ["TokenHSHarness"],
-  // "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
@@ -30,4 +30,10 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "prover_args": [
+		"-splitParallel true",
+		"-deleteSMTFile false",
+		"-smt_easy_LIA true"
+	],
+	"smt_timeout": "4800",
 }
