--- a/certora/conf/healthStatus/VaultHealthStatus.conf
+++ b/certora/conf/healthStatus/VaultHealthStatus.conf
@@ -17,13 +17,12 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy_strategy"
+    "accountsStayHealthy"
   ],
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
   "parametric_contracts": ["VaultHSHarness"],
-  // "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
@@ -31,4 +30,10 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "prover_args": [
+		"-splitParallel true",
+		"-deleteSMTFile false",
+		"-smt_easy_LIA true"
+	],
+	"smt_timeout": "4800",
 }
