Mainly Health status check, last few ERC4626 rules

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -52,7 +52,7 @@
   "optimistic_loop": true, 
   "loop_iter": "2",
   "prover_args": [
-    "-adaptiveSolverConfig false -smt_nonLinearArithmetic false -depth 0"
+    "-adaptiveSolverConfig false -depth 0 -smt_nonLinearArithmetic true"
   ],
   // "prover_args": [
   //   "-maxConcurrentTransforms INLINED_HOOKS:8",
