--- a/certora/conf/healthStatus/InitializeHealthStatus.conf
+++ b/certora/conf/healthStatus/InitializeHealthStatus.conf
@@ -17,7 +17,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy_strategy"
+    "accountsStayHealthy"
   ],
   "build_cache": true,
   "prover_version": "master",
