--- a/certora/conf/healthStatus/GovernanceHealthStatus.conf
+++ b/certora/conf/healthStatus/GovernanceHealthStatus.conf
@@ -17,6 +17,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
+    "accountsStayHealthy",
     "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
