--- a/certora/conf/healthStatus/VaultHealthStatus.conf
+++ b/certora/conf/healthStatus/VaultHealthStatus.conf
@@ -17,7 +17,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
   "prover_version": "master",
