Martin's spec performance improvement refactoring supply calls

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -22,23 +22,23 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
- "rule": [
-  // //    "conversionWeakMonotonicity",
-    "assetsMoreThanSupply",
-  // //    "contributingProducesShares",
-  // // "depositMonotonicity",
-  // //    "dustFavorsTheHouse",
-  // //    "noAssetsIfNoSupply",
-  // //    "noSupplyIfNoAssets",
-  // //    "supplyLessThanUnderlyingAsset",
-  // //    "onlyContributionMethodsReduceAssets",
-  // //    "reclaimingProducesAssets",
-  // //    "redeemingAllValidity",
-  // //    "totalsMonotonicity",
-  // //    "vaultSolvency"
-  ],
+  // "rule": [
+  // // //    "conversionWeakMonotonicity",
+  //   "assetsMoreThanSupply",
+  // // //    "contributingProducesShares",
+  // // // "depositMonotonicity",
+  // // //    "dustFavorsTheHouse",
+  // // //    "noAssetsIfNoSupply",
+  // // //    "noSupplyIfNoAssets",
+  // // //    "supplyLessThanUnderlyingAsset",
+  // // //    "onlyContributionMethodsReduceAssets",
+  // // //    "reclaimingProducesAssets",
+  // // //    "redeemingAllValidity",
+  // // //    "totalsMonotonicity",
+  // // //    "vaultSolvency"
+  // ],
   // "coverage_info" : "advanced",
-  "method": "redeem(uint256,address,address)",
+  // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   // "method" : "deposit(uint256,address)",
   // "method" : "mint(uint256,address)",
@@ -51,9 +51,12 @@
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_args": [
-    "-adaptiveSolverConfig false -depth 0 -smt_nonLinearArithmetic true"
-  ],
+	"prover_args": [
+		"-smt_easy_LIA true"
+	],
+  // "prover_args": [
+  //   "-adaptiveSolverConfig false -depth 0 -smt_nonLinearArithmetic true"
+  // ],
   // "prover_args": [
   //   "-maxConcurrentTransforms INLINED_HOOKS:8",
   //   "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 "
@@ -61,7 +64,6 @@
   // "prover_args": [
 		// "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 -s [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]"
 	// ] ,
-  // old config
   // "prover_args": [
 	// 	"-smt_nonLinearArithmetic true",
 	// 	"-adaptiveSolverConfig false",
