Fix change in LTVConfig

--- a/certora/conf/healthStatus/BorrowingHealthStatus.conf
+++ b/certora/conf/healthStatus/BorrowingHealthStatus.conf
@@ -17,9 +17,9 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy_strategy"
+    "accountsStayHealthy"
   ],
-  // "method" : "borrow(uint256,address)",
+  "method" : "borrow(uint256,address)",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
