Trim reqs in assetsMoreThanSupply, add conf options

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -38,7 +38,7 @@
   // //    "vaultSolvency"
   ],
   // "coverage_info" : "advanced",
-  "method": "redeem(uint256,address,address)",
+  // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   // "method" : "deposit(uint256,address)",
   // "method" : "mint(uint256,address)",
@@ -51,9 +51,13 @@
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_args": [
-    "-adaptiveSolverConfig false -depth 0 -smt_nonLinearArithmetic true"
+  // assetsMoreThanSupply
+  "prover_args" : [
+    "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -splitParallel true -splitParallelInitialDepth 2 -depth 15 -s [z3:arith1,yices:def] -mediumTimeout 2 -splitParallelTimelimit 7200"
   ],
+  // "prover_args": [
+  //   "-adaptiveSolverConfig false -depth 0 -smt_nonLinearArithmetic true"
+  // ],
   // "prover_args": [
   //   "-maxConcurrentTransforms INLINED_HOOKS:8",
   //   "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 "
