Fixing some spurious counterexamples

--- a/certora/conf/healthStatus/InitializeHealthStatus.conf
+++ b/certora/conf/healthStatus/InitializeHealthStatus.conf
@@ -5,6 +5,7 @@
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/InitializeHSHarness.sol",
   ],
   "link": [
