--- a/certora/conf/healthStatus/LiquidationHealthStatus.conf
+++ b/certora/conf/healthStatus/LiquidationHealthStatus.conf
@@ -5,6 +5,7 @@
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/LiquidationHSHarness.sol",
   ],
   "link": [
@@ -17,7 +18,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy_strategy"
+    "accountsStayHealthy"
   ],
   "method":"liquidate(address,address,uint256,uint256)",
   "build_cache": true,
