--- a/certora/conf/healthStatus/BalanceForwarderHealthStatus.conf
+++ b/certora/conf/healthStatus/BalanceForwarderHealthStatus.conf
@@ -5,6 +5,7 @@
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/BalanceForwarder.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/BalanceForwarderHSHarness.sol",
   ],
   "link": [
