--- a/certora/conf/healthStatus/BorrowingHealthStatus.conf
+++ b/certora/conf/healthStatus/BorrowingHealthStatus.conf
@@ -5,6 +5,7 @@
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/BorrowingHSHarness.sol",
   ],
   "link": [
@@ -17,9 +18,13 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    // "accountsStayHealthy",
+    "accountsStayHealthy_strategy"
   ],
-  "method" : "borrow(uint256,address)",
+  // "method" : "borrow(uint256,address)",
+  // "method" : "pullDebt(uint256, address)",
+  // "method" : "repayWithShares(uint256,address)",
+  // "method" : "repay(uint256,address)",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
