--- a/certora/conf/healthStatus/GovernanceHealthStatus.conf
+++ b/certora/conf/healthStatus/GovernanceHealthStatus.conf
@@ -5,6 +5,7 @@
     "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/GovernanceHSHarness.sol",
   ],
   "link": [
@@ -17,7 +18,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy",
+    // "accountsStayHealthy",
     "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
