Add missing harness, add scripts

--- a/certora/conf/ERC4626Rules/BaseERC4626.conf
+++ b/certora/conf/ERC4626Rules/BaseERC4626.conf
@@ -43,11 +43,11 @@
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_args" : [
-    "-smt_nonLinearArithmetic true",
-    "-adaptiveSolverConfig false",
-    "-splitParallel true"
-  ],
+  // "prover_args" : [
+  //   "-smt_nonLinearArithmetic true",
+  //   "-adaptiveSolverConfig false",
+  //   "-splitParallel true"
+  // ],
   // assetsMoreThanSupply
   // "prover_args" : [
   //   "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -splitParallel true -splitParallelInitialDepth 2 -depth 15 -s [z3:arith1,yices:def] -mediumTimeout 2 -splitParallelTimelimit 7200"
