--- a/certora/conf/healthStatus/BorrowingHealthStatus.conf
+++ b/certora/conf/healthStatus/BorrowingHealthStatus.conf
@@ -18,11 +18,11 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    // "accountsStayHealthy",
-    "accountsStayHealthy_strategy"
+    "accountsStayHealthy",
+    // "accountsStayHealthy_strategy"
   ],
   // "method" : "borrow(uint256,address)",
-  // "method" : "pullDebt(uint256, address)",
+  "method" : "pullDebt(uint256,address)",
   // "method" : "repayWithShares(uint256,address)",
   // "method" : "repay(uint256,address)",
   "build_cache": true,
@@ -36,8 +36,12 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+	// "prover_args": [
+	// 	" -smt_easy_LIA true"
+	// ],
 	"prover_args": [
-		" -smt_easy_LIA true"
+		"-timeoutCracker true"
 	],
-  "smt_timeout": "7200",
+  // "smt_timeout": "7200",
+  "smt_timeout": "28800",
 }
