--- a/certora/conf/healthStatus/VaultHealthStatus.conf
+++ b/certora/conf/healthStatus/VaultHealthStatus.conf
@@ -19,8 +19,10 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy_strategy"
+    // "accountsStayHealthy_strategy",
+    "accountsStayHealthy"
   ],
+  "method" : "redeem(uint256,address,address)",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
