Fix summary bug. split confs

--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -16,12 +16,12 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  // "rule": [
+  "rule": [
   // // //    "conversionWeakMonotonicity",
   // // "assetsMoreThanSupply",
-  // // //    "contributingProducesShares",
+    "contributingProducesShares",
   // // // "depositMonotonicity",
-  // // //    "dustFavorsTheHouse",
+  // "dustFavorsTheHouse",
   // // //    "noAssetsIfNoSupply",
   // // //    "noSupplyIfNoAssets",
   // // //    "supplyLessThanUnderlyingAsset",
@@ -30,7 +30,7 @@
   // // //    "redeemingAllValidity",
   // // //    "totalsMonotonicity",
   // // //    "vaultSolvency"
-  // ],
+  ],
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   // "method" : "deposit(uint256,address)",
