Holy grail for liquidate

--- a/certora/conf/healthStatus/LiquidateHealthStatus.conf
+++ b/certora/conf/healthStatus/LiquidateHealthStatus.conf
@@ -6,28 +6,27 @@
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/TokenHarness.sol",
-    "certora/harness/healthStatus/BorrowingHSHarness.sol",
+    "certora/harness/healthStatus/LiquidationHSHarness.sol",
   ],
   "link": [
-    "BorrowingHSHarness:evc=EVCHarness"
+    "LiquidationHSHarness:evc=EVCHarness",
   ],
-  "verify": "BorrowingHSHarness:certora/specs/HealthStatusInvariant.spec",
+  "verify": "LiquidationHSHarness:certora/specs/LiquidateHealthStatus.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy_strategy"
+    // "liquidateAccountsStayHealthy_liquidator_no_debt_socialization",
+    "liquidateAccountsStayHealthy_liquidator_with_debt_socialization",
+    // "liquidateAccountsStayHealthy_not_violator"
   ],
-  // "method" : "borrow(uint256,address)",
-  // "method" : "pullDebt(uint256,address)",
-  "method" : "repayWithShares(uint256,address)",
-  // "method" : "repay(uint256,address)",
+  "method":"liquidate(address,address,uint256,uint256)",
   "build_cache": true,
   "prover_version": "master",
   "server" : "production",
-  "parametric_contracts": ["BorrowingHSHarness"],
+  "parametric_contracts": ["LiquidationHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
@@ -36,12 +35,7 @@
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
 	"prover_args": [
-		" -timeoutCracker true"
+    "-smt_easy_LIA true"
 	],
   "smt_timeout": "7200",
-	// "prover_args": [
-	// 	"-timeoutCracker true"
-	// ],
-  // "smt_timeout": "7200",
-  // "smt_timeout": "28800",
 }
